# log_parser

./: Dockerfile  build.sh  pyproject.toml  readme.md  run.sh
.github/workflows/: ci.yml
log_parser/: data_parser.py  main.py
log_parser/application/: middlewares.py  models.py  utils.py  version.py
log_parser/configs/: config.py  config.yaml
log_parser/data/: re_model.txt
log_parser/handlers/: metrics_handler.py  version_handler.py
tests/: test_router.py
