[tool.poetry]
name = "professional"
version = "0.1.0"
description = ""
authors = ["helenvr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.3"
fastapi = {extras = ["all"], version = "^0.115.12"}
flake8 = "^7.2.0"
pytest = "^8.4.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
